--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "simplebar": "^5.2.1",
         "smart-grid": "^2.1.2",
         "swiper": "^5.4.5",
+        "tippy.js": "^6.2.6",
         "wnumb": "^1.2.0"
     },
     "lint-staged": {
