--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "air-datepicker": "^2.2.3",
         "choices.js": "^9.0.1",
         "dropzone": "^5.7.1",
+        "inputmask": "^5.0.5",
         "jquery": "^3.5.1",
         "jquery.cookie": "^1.4.1",
         "mmenu-js": "^8.5.13",
